--- a/src/Scrum/Views/Projects/Details.cshtml
+++ b/src/Scrum/Views/Projects/Details.cshtml
@@ -7,10 +7,40 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.28/css/uikit.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.28/js/uikit.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.28/js/uikit-icons.min.js"></script>
     <link href="~/css/Projects/Detail.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.28/js/uikit-icons.min.js"></script>
 </head>
 <body>
+    <div class="uk-offcanvas-content">
+
+        <button class="uk-button uk-button-default uk-margin-small-right" type="button" uk-toggle="target: #offcanvas-nav-stuff">Your Stuff</button>
+
+        <div id="offcanvas-nav-stuff" uk-offcanvas="flip: true; overlay: true">
+            <div class="uk-offcanvas-bar uk-flex uk-flex-column">
+
+                <h2>Assigned to You @ViewBag.CurrentUser</h2>
+                <table class="uk-table uk-table-justify uk-table-divider">
+                    <thead>
+                        <tr>
+                            <th class="uk-width-small">Task</th>
+                            <th>Status</th>
+                            <th>Details</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var task in @ViewBag.Tasks)
+                        {
+                            <tr>
+                                <td>@task.Description</td>
+                                <td>@task.Complete</td>
+                                <td><button class="uk-button view" type="button">@Html.ActionLink("Work", "Details", "Tasks", new { id = @task.TaskId })</button></td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
     <ul class="uk-breadcrumb">
         <li><a href="#" class="uk-text-large uk-text-bold">Projects</a></li>
         <li><a href="#" class="uk-text-large uk-text-bold">@Model.Title</a></li>
@@ -137,17 +167,7 @@
             </div>
         </div>
     </div>
-    <h2>Assigned to You @ViewBag.CurrentUser</h2>
-    @foreach (var task in @ViewBag.Tasks)
-    {
-        <p>@task.Description</p>
-    }
-
-
-
     <p>@Html.ActionLink("Back to List", "Index")</p>
-
     <p>@ViewBag.SprintTotal</p>
-
 </body>
 </html>
