--- a/src/Scrum/Views/Projects/Details.cshtml
+++ b/src/Scrum/Views/Projects/Details.cshtml
@@ -80,9 +80,67 @@
                         <p><button type="button" class="uk-button uk-button-primary"><i class="fa fa-plus" aria-hidden="true"></i> @Html.ActionLink("Update", "Create", "Updates", new { id = Model.ProjectId })</button></p>
                         @foreach (var update in @ViewBag.Updates)
                         {
-                            <p>@update.Note</p>
-                            <p>@update.TimeStamp</p>
-                            <p>@update.User</p>
+                            @if (@update.UpdateType.Name == "Beef")
+                            {
+                                <article class="uk-comment uk-comment-primary uk-background-cover" style="background-color: #FF9999">
+                                    <header class="uk-comment-header uk-grid-small uk-flex-middle" uk-grid>
+                                        <div class="uk-width-auto">
+                                            <img class="uk-comment-avatar" src="~/images/download.jpg" width="30" height="30" alt="">
+                                        </div>
+                                        <div class="uk-width-expand">
+                                            <h4 class="uk-comment-title uk-margin-remove"><a class="uk-link-reset" href="#">@update.User</a></h4>
+                                            <ul class="uk-comment-meta uk-subnav uk-subnav-divider uk-margin-remove-top">
+                                                <li><a href="#">@update.TimeStamp</a></li>
+                                                <li><i class="fa fa-thumbs-down" aria-hidden="true"></i></li>
+                                            </ul>
+                                        </div>
+                                    </header>
+                                    <div class="uk-comment-body">
+                                        <p>@update.Note</p>
+                                    </div>
+                                </article>
+                            }
+                            @if (@update.UpdateType.Name == "Change")
+                            {
+                                <article class="uk-comment uk-comment-primary uk-background-cover" style="background-color: lightyellow">
+                                    <header class="uk-comment-header uk-grid-small uk-flex-middle" uk-grid>
+                                        <div class="uk-width-auto">
+                                            <img class="uk-comment-avatar" src="~/images/download.jpg" width="30" height="30" alt="">
+                                        </div>
+                                        <div class="uk-width-expand">
+                                            <h4 class="uk-comment-title uk-margin-remove"><a class="uk-link-reset" href="#">@update.User</a></h4>
+                                            <ul class="uk-comment-meta uk-subnav uk-subnav-divider uk-margin-remove-top">
+                                                <li><a href="#">@update.TimeStamp</a></li>
+                                                <li><i class="fa fa-scissors" aria-hidden="true"></i></li>
+                                            </ul>
+                                        </div>
+                                    </header>
+                                    <div class="uk-comment-body">
+                                        <p>@update.Note</p>
+                                    </div>
+                                </article>
+                            }
+                            @if (@update.UpdateType.Name == "Note")
+                            {
+                                <article class="uk-comment uk-comment-primary uk-background-cover" style="background-color: aliceblue">
+                                    <header class="uk-comment-header uk-grid-small uk-flex-middle" uk-grid>
+                                        <div class="uk-width-auto">
+                                            <img class="uk-comment-avatar" src="~/images/download.jpg" width="30" height="30" alt="">
+                                        </div>
+                                        <div class="uk-width-expand">
+                                            <h4 class="uk-comment-title uk-margin-remove"><a class="uk-link-reset" href="#">@update.User</a></h4>
+                                            <ul class="uk-comment-meta uk-subnav uk-subnav-divider uk-margin-remove-top">
+                                                <li><a href="#">@update.TimeStamp</a></li>
+                                                <li><i class="fa fa-comment" aria-hidden="true"></i></li>
+                                            </ul>
+                                        </div>
+                                    </header>
+                                    <div class="uk-comment-body">
+                                        <p>@update.Note</p>
+                                    </div>
+                                </article>
+                            }
+                            <br />
                         }
                     </li>
                     <li>
