--- a/src/Scrum/Views/Shared/_Layout.cshtml
+++ b/src/Scrum/Views/Shared/_Layout.cshtml
@@ -95,7 +95,7 @@
     <div class="container body-content">
         <div class="uk-offcanvas-content">
 
-            <button class="uk-button uk-button-default uk-margin-small-center" type="button" uk-toggle="target: #offcanvas-nav-primary"><i class="fa fa-bars uk-text-large uk-text-bold" aria-hidden="true"></i></button>
+            <button class="uk-button uk-button-default uk-margin-small-center navbutton" type="button" uk-toggle="target: #offcanvas-nav-primary"><i class="fa fa-bars uk-text-large uk-text-bold" aria-hidden="true"></i></button>
 
             <div id="offcanvas-nav-primary" uk-offcanvas="overlay: true">
                 <div class="uk-offcanvas-bar uk-flex uk-flex-column">
