--- a/src/Scrum/Views/Tools/Index.cshtml
+++ b/src/Scrum/Views/Tools/Index.cshtml
@@ -7,39 +7,45 @@
     <link href="~/css/Tools/index.css" rel="stylesheet" />
 </head>
 <body>
-    <hr />
-    <table class="table">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Documentation)
-            </th>
-        </tr>
-
-        @foreach (var listTool in Model)
-        {
-            <tr class="tooltype-@listTool.ToolTypeId">
-                <td>
-                    @Html.DisplayFor(modelTool => listTool.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelTool => listTool.Description)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelTool => listTool.Documentation)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = listTool.ToolId }) |
-                    @Html.ActionLink("Details", "Details", new { id = listTool.ToolId }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = listTool.ToolId })
-                </td>
+    <table class="uk-table uk-table-middle uk-table-divider">
+        <thead>
+            <tr>
+                <th class="uk-width-small">
+                    @Html.DisplayNameFor(model => model.Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Description)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Documentation)
+                </th>
+                <th class="uk-width-small">
+                    Options
+                </th>
             </tr>
-        }
+        </thead>
+        <tbody>
+            @foreach (var listTool in Model)
+            {
+                <tr class="tooltype-@listTool.ToolTypeId">
+                    <td>
+                        @Html.DisplayFor(modelTool => listTool.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelTool => listTool.Description)
+                    </td>
+                    <td>
+                        <a href="@listTool.Documentation">
+                            <button class="uk-button uk-button-secondary" type="button">View</button>
+                        </a>
+                    </td>
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", new { id = listTool.ToolId }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = listTool.ToolId })
+                    </td>
+                </tr>
+            }
+        </tbody>
     </table>
     <p>
         @Html.ActionLink("Create New", "Create")
