--- a/src/Scrum/Views/Tools/Index.cshtml
+++ b/src/Scrum/Views/Tools/Index.cshtml
@@ -35,7 +35,7 @@
                         @Html.DisplayFor(modelTool => listTool.Description)
                     </td>
                     <td>
-                        <a href="@listTool.Documentation">
+                        <a href="@listTool.Documentation" target="_blank">
                             <button class="uk-button uk-button-secondary" type="button">View</button>
                         </a>
                     </td>
